--- a/ui/NewCrl.ui
+++ b/ui/NewCrl.ui
@@ -89,7 +89,7 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>last update</string>
+           <string>Last update</string>
           </property>
          </widget>
         </item>
@@ -103,7 +103,7 @@
         <item row="1" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>next update</string>
+           <string>Next update</string>
           </property>
          </widget>
         </item>
@@ -185,7 +185,7 @@
       <item row="3" column="0">
        <widget class="QCheckBox" name="setCrlNumber">
         <property name="text">
-         <string>CRL Number</string>
+         <string>CRL number</string>
         </property>
         <property name="checked">
          <bool>true</bool>
