--- a/ui/CrlDetail.ui
+++ b/ui/CrlDetail.ui
@@ -185,14 +185,14 @@
           <item row="1" column="0">
            <widget class="QLabel" name="TextLabel2_2">
             <property name="text">
-             <string>Next Update</string>
+             <string>Next update</string>
             </property>
            </widget>
           </item>
           <item row="0" column="0">
            <widget class="QLabel" name="TextLabel1_2">
             <property name="text">
-             <string>Last Update</string>
+             <string>Last update</string>
             </property>
            </widget>
           </item>
