--- a/ui/NewKey.ui
+++ b/ui/NewKey.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>New key</string>
+   <string>New Key</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -36,7 +36,7 @@
         </font>
        </property>
        <property name="text">
-        <string>New key</string>
+        <string>New Key</string>
        </property>
       </widget>
      </item>
@@ -148,7 +148,7 @@
       <item row="5" column="1">
        <widget class="QLabel" name="curveLabel">
         <property name="text">
-         <string>Curve</string>
+         <string>Curve name</string>
         </property>
        </widget>
       </item>
